syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "TowerCurLevelRecord.proto";
import "TowerFloorRecord.proto";
import "TowerMonthlyBrief.proto";

// CmdId: 2449
// EnetChannelId: 0
// EnetIsReliable: true
message TowerAllDataRsp {
	uint32 tower_schedule_id = 13;
	repeated TowerFloorRecord tower_floor_record_list = 12;
	uint32 daily_floor_id = 9;
	uint32 daily_level_index = 6;
	TowerCurLevelRecord cur_level_record = 2;
	uint32 next_schedule_change_time = 8;
	map<uint32, uint32> floor_open_time_map = 11;
	bool is_first_interact = 14;
	TowerMonthlyBrief monthly_brief = 1;
	uint32 skip_to_floor_index = 3;
	uint32 commemorative_reward_id = 15;
	map<uint32, uint32> skip_floor_granted_reward_item_map = 5;
	uint32 valid_tower_record_num = 10;
	int32 retcode = 4;
	bool is_finished_entrance_floor = 7;
	uint32 schedule_start_time = 490;
	TowerMonthlyBrief last_schedule_monthly_brief = 395;
}
